# Aws-Data-Pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  copy.env  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: deployment.yml  linters.yml
deployment/glue-jobs/: main.tf  outputs.tf  variables.tf
src/: data_processing.py  kapsule_data_processing.py
