[tool.poetry]
name = "augius_data_engineering"
version = "0.1.0"
description = "Augius Data Engineering Pipeline"
authors = ["GeorgeGithiri5 <georgegithiri002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.3.1"
flake8 = "^5.0.4"
mypy = "^0.990"
isort = "^5.10.1"
black = "^22.10.0"
bandit = "^1.7.4"
pre-commit = "^2.20.0"
pydocstyle = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
